@@ -7,3 +7,4 @@
   filtering
 - add OS statistic info for UT 2003 and any other missing games
 - update game types for Q3 mods - move to external file
+- Add tooltips to other areas
